fix: force to wrap words when they extend the normal container size.

--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,7 @@ footer {
     border-radius: 25px;
 
     font-size: 2em;
+    word-wrap: break-word;
 
     background: beige;
 
